# ComfyUI-SAM2

./: .tracking  README.md  __init__.py  node.py  pyproject.toml  requirements.txt  sam2.py
.github/workflows/: close_stale_issue.yml  publish.yml
local_groundingdino/models/GroundingDINO/: bertwarper.py
sam2/: sam2_image_predictor.py
sam2/modeling/sam/: transformer.py
sam2/utils/: transforms.py
sam2_configs/: sam2_1_hiera_large.yaml
