[project]
name = "comfyui-sam2"
description = "This project adapts the SAM2 to incorporate functionalities from [a/comfyui_segment_anything](https://github.com/storyicon/comfyui_segment_anything). Many thanks to continue-revolution for their foundational work."
version = "1.0.2"
license = {file = "LICENSE"}
dependencies = ["timm", "addict", "yapf", "torch>=2.3.1", "torchvision>=0.18.1", "numpy>=1.24.4", "tqdm>=4.66.1", "hydra-core>=1.3.2", "iopath>=0.1.10", "pillow>=9.4.0", "matplotlib>=3.9.1", "opencv-python>=4.7.0"]

[project.urls]
Repository = "https://github.com/neverbiasu/ComfyUI-SAM2"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "faych"
DisplayName = "ComfyUI-SAM2"
Icon = ""